remove feature to close dropdown menu when blurred(still buggy) and add feature to close dropdown menu when link is clicked

--- a/src/styles/navbar.module.scss
+++ b/src/styles/navbar.module.scss
@@ -51,6 +51,8 @@
   background-color: white;
 
   .dropdown-option {
+    text-decoration: none;
+    color: inherit;
     box-sizing: border-box;
     cursor: pointer;
     margin: 0 auto;
